apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.instance: home-assistant
    app.name: home-assistant
  name: home-assistant
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app.instance: home-assistant
      app.name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.instance: home-assistant
        app.name: home-assistant
      annotations:
        backup.velero.io/backup-volumes: config,media,backup
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Chicago
        image: homeassistant/home-assistant:2021.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        name: home-assistant
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: config
      - name: vscode
        image: codercom/code-server:3.11.1
        imagePullPolicy: IfNotPresent
        workingDir: /config
        args:
          - --port=8080
          - --extensions-dir=/config/.vscode
          - --user-data-dir=/config/.vscode
        ports:
          - name: vscode
            containerPort: 8080
            protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /backup
          name: backup
        - mountPath: /media
          name: media
        securityContext:
            runAsUser: 0
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-config
      - name: media
        persistentVolumeClaim:
          claimName: home-assistant-media
      - name: backup
        persistentVolumeClaim:
          claimName: home-assistant-backup
