apps/home-assistant/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: home-assistant-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: home-assistant-http-port
      protocol: HTTP
    hosts:
      - home-assistant.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: home-assistant-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: home-assistant.simplefxn.com
    hosts:
      - home-assistant.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home-assistant-vs
  namespace: istio-system
spec:
  hosts:
  - "home-assistant.simplefxn.com"
  gateways:
  - home-assistant-gateway
  http:
  - route:
    - destination:
        host: home-assistant.apps.svc.cluster.local
        port:
          number: 8123
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: home-assistant
  namespace: istio-system
spec:
  host: home-assistant.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
